[package]
name = "rni"
version = "0.1.11"
edition = "2021"
description = "a rust version ni"
license = "MIT"
homepage = "https://github.com/JiatLn/ri"
repository = "https://github.com/JiatLn/ri"
keywords = ["cli", "ni", "ri"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
requestty = { version = "0.5.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
